--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/alamoheatingandcoolinginc-06-22/">https://rank-fortress-digital-agency.github.io/alamoheatingandcoolinginc-06-22/</a><br>
-                <a target="_bLank" href="http://alamoheatingandcoolinginc-06-22.s3-website.ap-northeast-2.amazonaws.com">http://alamoheatingandcoolinginc-06-22.s3-website.ap-northeast-2.amazonaws.com</a><br>
-                <a target="_bLank" href="https://loquacious-torrone-f2e4c1.netlify.app/">https://loquacious-torrone-f2e4c1.netlify.app/</a><br>
+                <a target="_bLank" href="https://rankfortresswebdevelopmentservices.github.io/alamoheatingandcoolinginc-10-22/">https://rankfortresswebdevelopmentservices.github.io/alamoheatingandcoolinginc-10-22/</a><br>
+                <a target="_bLank" href="http://alamoheatingandcoolinginc-10-22.s3-website.us-east-2.amazonaws.com/">http://alamoheatingandcoolinginc-10-22.s3-website.us-east-2.amazonaws.com/</a><br>
+                <a target="_bLank" href="https://heroic-bombolone-a18924.netlify.app/">https://heroic-bombolone-a18924.netlify.app/</a><br>
             </section>
 
         </div>
